--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <main>
       <section class="container">
-        <h1>Notizblock</h1>
+        <h1>Notizblock mit Git</h1>
         <div class="addNoteContainer">
           <div class="addNote">
             <input
